turing-talos/apps/blog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
spec:
  parentRefs:
  - name: envoy-public
    namespace: envoy-gateway-system
    sectionName: https-apex
  hostnames:
  - jern.fi
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blog
      port: 80
